Revert "attempt to fix padding bug on safari"
This reverts commit 4382ada913dec9120639c876ea38d12e8b12bc41.

--- a/main.css
+++ b/main.css
@@ -14,7 +14,6 @@ body {
     width: 100%;
     font-family: 'Lato', sans-serif;
     color: #333;
-    line-height: normal;
 }
 
 .outer,
